Colaboratory を使用して作成しました

--- a/Stable_Diffusion.ipynb
+++ b/Stable_Diffusion.ipynb
@@ -560,7 +560,101 @@
             "Installing open_clip\n",
             "Installing xformers\n",
             "Cloning Stable Diffusion into repositories/stable-diffusion-stability-ai...\n",
-            "Cloning Taming Transformers into repositories/taming-transformers...\n"
+            "Cloning Taming Transformers into repositories/taming-transformers...\n",
+            "Cloning K-diffusion into repositories/k-diffusion...\n",
+            "Cloning CodeFormer into repositories/CodeFormer...\n",
+            "Cloning BLIP into repositories/BLIP...\n",
+            "Installing requirements for CodeFormer\n",
+            "Installing requirements for Web UI\n",
+            "Installing pycloudflared\n",
+            "\n",
+            "Installing sd-dynamic-prompts requirements.txt\n",
+            "\n",
+            "Installing sd-webui-controlnet requirement: mediapipe\n",
+            "Installing sd-webui-controlnet requirement: svglib\n",
+            "Couldn't install sd-webui-controlnet requirement: svglib.\n",
+            "Command: \"/usr/bin/python3\" -m pip install svglib --prefer-binary\n",
+            "Error code: 1\n",
+            "stdout: Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Collecting svglib\n",
+            "  Downloading svglib-1.5.1.tar.gz (913 kB)\n",
+            "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 913.9/913.9 kB 13.7 MB/s eta 0:00:00\n",
+            "  Preparing metadata (setup.py): started\n",
+            "  Preparing metadata (setup.py): finished with status 'done'\n",
+            "Collecting reportlab\n",
+            "  Downloading reportlab-4.0.0-py3-none-any.whl (1.9 MB)\n",
+            "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 1.9/1.9 MB 64.6 MB/s eta 0:00:00\n",
+            "Requirement already satisfied: lxml in /usr/local/lib/python3.10/dist-packages (from svglib) (4.9.2)\n",
+            "Requirement already satisfied: tinycss2>=0.6.0 in /usr/local/lib/python3.10/dist-packages (from svglib) (1.2.1)\n",
+            "Collecting cssselect2>=0.2.0\n",
+            "  Downloading cssselect2-0.7.0-py3-none-any.whl (15 kB)\n",
+            "Requirement already satisfied: webencodings in /usr/local/lib/python3.10/dist-packages (from cssselect2>=0.2.0->svglib) (0.5.1)\n",
+            "Requirement already satisfied: pillow>=9.0.0 in /usr/local/lib/python3.10/dist-packages (from reportlab->svglib) (9.5.0)\n",
+            "Collecting freetype-py<2.4,>=2.3.0\n",
+            "  Downloading freetype_py-2.3.0-py3-none-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_12_x86_64.manylinux2010_x86_64.whl (978 kB)\n",
+            "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 978.9/978.9 kB 74.2 MB/s eta 0:00:00\n",
+            "Collecting rlPyCairo<1,>=0.2.0\n",
+            "  Downloading rlPyCairo-0.2.0-py3-none-any.whl (10 kB)\n",
+            "Collecting pycairo>=1.20.0\n",
+            "  Downloading pycairo-1.23.0.tar.gz (344 kB)\n",
+            "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 344.6/344.6 kB 39.2 MB/s eta 0:00:00\n",
+            "  Installing build dependencies: started\n",
+            "  Installing build dependencies: finished with status 'done'\n",
+            "  Getting requirements to build wheel: started\n",
+            "  Getting requirements to build wheel: finished with status 'done'\n",
+            "  Installing backend dependencies: started\n",
+            "  Installing backend dependencies: finished with status 'done'\n",
+            "  Preparing metadata (pyproject.toml): started\n",
+            "  Preparing metadata (pyproject.toml): finished with status 'done'\n",
+            "Building wheels for collected packages: svglib, pycairo\n",
+            "  Building wheel for svglib (setup.py): started\n",
+            "  Building wheel for svglib (setup.py): finished with status 'done'\n",
+            "  Created wheel for svglib: filename=svglib-1.5.1-py3-none-any.whl size=30919 sha256=63fee54b71b6efd1bd5537910aa8fdd8d8e62dc2193ab024fc14a27f7225bbd6\n",
+            "  Stored in directory: /root/.cache/pip/wheels/56/9f/90/f37f4b9dbf82987a24ae14f15586e96715cb669a4710b3b85d\n",
+            "  Building wheel for pycairo (pyproject.toml): started\n",
+            "  Building wheel for pycairo (pyproject.toml): finished with status 'error'\n",
+            "Successfully built svglib\n",
+            "Failed to build pycairo\n",
+            "\n",
+            "stderr:   error: subprocess-exited-with-error\n",
+            "  \n",
+            "  × Building wheel for pycairo (pyproject.toml) did not run successfully.\n",
+            "  │ exit code: 1\n",
+            "  ╰─> See above for output.\n",
+            "  \n",
+            "  note: This error originates from a subprocess, and is likely not a problem with pip.\n",
+            "  ERROR: Failed building wheel for pycairo\n",
+            "ERROR: Could not build wheels for pycairo, which is required to install pyproject.toml-based projects\n",
+            "\n",
+            "\n",
+            "Warning: Failed to install svglib, some preprocessors may not work.\n",
+            "Installing sd-webui-controlnet requirement: fvcore\n",
+            "\n",
+            "Launching Web UI with arguments: --share --disable-safe-unpickle --no-half-vae --xformers --enable-insecure-extension --gradio-queue --remotemoe\n",
+            "2023-05-09 15:36:49.712399: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+            "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+            "2023-05-09 15:36:52.281950: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
+            "ControlNet v1.1.150\n",
+            "ControlNet v1.1.150\n",
+            "remote.moe detected, trying to connect...\n",
+            "Warning: Permanently added 'remote.moe,159.69.126.209' (ECDSA) to the list of known hosts.\n",
+            "Calculating sha256 for /content/sd-webui/models/Stable-diffusion/braBeautifulRealistic_v40.safetensors: 9c03252bea886e921a10f6b5f61b2d60565c32d02bbbb40cb59944c0218c5e90\n",
+            "Loading weights [9c03252bea] from /content/sd-webui/models/Stable-diffusion/braBeautifulRealistic_v40.safetensors\n",
+            "Creating model from config: /content/sd-webui/configs/v1-inference.yaml\n",
+            "LatentDiffusion: Running in eps-prediction mode\n",
+            "DiffusionWrapper has 859.52 M params.\n",
+            "Downloading (…)olve/main/vocab.json: 100% 961k/961k [00:00<00:00, 2.57MB/s]\n",
+            "Downloading (…)olve/main/merges.txt: 100% 525k/525k [00:00<00:00, 3.83MB/s]\n",
+            "Downloading (…)cial_tokens_map.json: 100% 389/389 [00:00<00:00, 2.19MB/s]\n",
+            "Downloading (…)okenizer_config.json: 100% 905/905 [00:00<00:00, 6.06MB/s]\n",
+            "Downloading (…)lve/main/config.json: 100% 4.52k/4.52k [00:00<00:00, 19.3MB/s]\n",
+            "Applying xformers cross attention optimization.\n",
+            "Textual inversion embeddings loaded(17): bad-picture-chill-75v, bad-image-v2-39000, bad-artist-anime, bad_prompt, charturnerv2, ulzzang-6500, bad-hands-5, easynegative, bad_prompt_version2, pureerosface_v1, HyperStylizeV6, ulzzang-6500-v1.1, ng_deepnegative_v1_75t, badhandv4, verybadimagenegative_v1.3, EasyNegativeV2, bad-artist\n",
+            "Textual inversion embeddings skipped(4): nrealfixer, nartfixer, nfixer, 21charturnerv2\n",
+            "Model loaded in 48.1s (calculate hash: 29.1s, load weights from disk: 0.7s, create model: 2.8s, apply weights to model: 5.5s, apply half(): 1.0s, load VAE: 7.9s, move model to device: 0.8s, load textual inversion embeddings: 0.2s).\n",
+            "Running on local URL:  http://127.0.0.1:7860\n",
+            "Running on public URL: https://372214a6-07e6-48f9.gradio.live\n",
+            "Running on public URL (recommended): http://5a3ud5jc2pe4w7hmqmkszx2igxkh3bgpkr6umy5nmiiajdfnxlua.remote.moe\n"
           ]
         }
       ],
